guess the cell demo

--- a/guess_the_cell/index.html
+++ b/guess_the_cell/index.html
@@ -10,6 +10,10 @@
 
 <body>
 
+  <div>
+    <p><input value="start the game" type="button" name="user" onclick="startGame()"></p>
+  </div>
+
   <table border="3">
     <tbody>
       <tr>
