guess the cell demo

--- a/guess_the_cell/index.html
+++ b/guess_the_cell/index.html
@@ -4,17 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>Угадай ячейку</title>
-  <script src="index.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
   <div>
-    <p><input value="start the game" type="button" name="user" onclick="addElement()"></p>
+    <p><input id="startButton" value="start the game" type="button" name="user" onclick="addElement()"></p>
   </div>
   <div id="divForContent"></div>
 
 </body>
+
+<script src="index.js"></script>
 
 </html>
