--- a/horoscope/index.html
+++ b/horoscope/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div id="divForContent">
+  <div>
     <input id="date-of-birdh" type="date">
 
     <input type="radio" name="day" value="today">
@@ -17,6 +17,7 @@
     <input type="radio" name="day" value="tomorrow">
     <label>tomorrow</label>
   </div>
+  <div id="divForContent"></div>
   <script src="index.js"></script>
 </body>
 
