cities game demo

--- a/horoscope/index.html
+++ b/horoscope/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="utf-8">
+  <script src="index.js"></script>
   <title>horoscope</title>
+  <link rel="shortcut icon" id="pageIcon" href="" type="image/x-icon">
 </head>
 
 <body>
-  <div>
+  <div class="navigation">
     <input id="date-of-birdh" type="date">
-
     <input type="radio" name="day" value="today">
     <label>today</label>
     <input type="radio" name="day" value="yesterday">
@@ -18,7 +19,6 @@
     <label>tomorrow</label>
   </div>
   <div id="divForContent"></div>
-  <script src="index.js"></script>
 </body>
 
 <link rel="stylesheet" href="style.css">
