city the game without layout

--- a/city_game/index.html
+++ b/city_game/index.html
@@ -5,12 +5,17 @@
   <meta charset="utf-8">
   <script src="index.js"></script>
   <title>Cities The Game</title>
-  <!-- <link rel="shortcut icon" id="pageIcon" href="" type="image/x-icon"> -->
 </head>
 
 <body>
-  <div class="navigation">
-    <input type="text" id="user-option"></input>
+  <div class="main">
+    <div class="column">
+    <div id="navigation" class="navigation"></div>
+    <div>
+      <input type="text" id="user-option"></input>
+    </div>
+    <div id="used-options"></div>
+    </div>
   </div>
 </body>
 
